# microvm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  NOTICE  README.md  SECURITY.md  go.mod  go.sum
.github/workflows/: publish-npm.yml
api/: check-generated.sh  generate.sh  openapi.yaml
api/codegen/: sdk-go.yaml  server.yaml
cmd/microvm/: main.go
cmd/microvm-agent/: main.go
cmd/microvmd/: main.go
docs/: index.html
images/: build.sh
images/base/: Dockerfile
images/go/: Dockerfile
images/node/: Dockerfile
images/packer/: Dockerfile  pack.sh
images/python/: Dockerfile
images/rust/: Dockerfile
internal/agent/: agent_test.go  exec.go  init_linux.go  init_other.go  listen_linux.go  listen_other.go  net_linux.go  server.go  storage_linux.go  supervisor_linux.go
internal/api/: errors.go  executions.go  files.go  middleware.go  pagination.go  pagination_test.go  sandboxes.go  server.go  server_test.go  storage_test.go  tasks.go  tasks_test.go  tenants.go
internal/auth/: auth.go  auth_test.go
internal/cgroup/: cgroup.go  fsmagic_linux.go  fsmagic_other.go
internal/fcapi/: fcapi.go  fcapi_test.go
internal/guestclient/: client.go  integration_test.go
internal/id/: id.go  id_test.go
internal/logstore/: logstore.go  logstore_test.go  ring.go  subscribe.go  subscribe_test.go
internal/netpool/: firewall_linux.go  pool.go  pool_test.go  tap_linux.go
internal/pool/: pool.go  (+1 more)
kernel/: Dockerfile  README.md  build.sh
sdk/python/: README.md  pyproject.toml
sdk/python/microvm/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+72 files in other folders)
